# bitvector-genealogy

./: Makefile  README.md  bvg.cc  generator.cc
cpp/: bvg.cpp  generator.cpp  meson.build
python/: Pipfile  compare_parents.py  populate.py
rs/: Cargo.toml
rs/.cargo/: config.toml
rs/src/: main.rs
