[package]
name = "bvg-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gregory <gmrehbein@gmail.com>"]
description = "Reconstruct MST from asexual bitvector genome evolution"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
libc = "0.2"
rayon = "1.8"
statrs = "0.16"

# Use Accelerate framework on macOS for optimized math
[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3"
